force-app/main/default/objects/Account/fields/Account_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Approval_Status__c</fullName>
    <label>Change Owner Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending for Approval</fullName>
            </value>
            <value>
                <fullName>1st Approver Approved</fullName>
            </value>
            <value>
                <fullName>2nd Approver Approved</fullName>
            </value>
            <value>
                <fullName>3rd Approver Approved</fullName>
            </value>
            <value>
                <fullName>Final Approved</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>