force-app/main/default/objects/Account/fields/Account_Plan_Flag__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Flag__c</fullName>
    <inlineHelpText>The flag to indicate whether the customer is suggested to have account plan created</inlineHelpText>
    <label>Account Plan Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>