force-app/main/default/objects/Account/fields/Account_Plan_Form__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Form__c</fullName>
    <label>Account Plan Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Form</fullName>
            </value>
            <value>
                <fullName>Short Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>