force-app/main/default/objects/Account/fields/Account_Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>Account_Sorting_Order__c</fullName>
    <formula>IF( 
    ISBLANK(
								Stamp_Owner_Zone_Team__c
    ),
    &apos;zzzzzzzzzz&apos;, 
    RPAD(
        Stamp_Owner_Zone_Team__c,
        20,
        &apos;*&apos;
    ) 
) &amp;

LPAD(
				TEXT(FLOOR(NI_Actual__c)) &amp; LPAD(text((NI_Actual__c - FLOOR(NI_Actual__c)) * 100), 2, &quot;0&quot;),
				18,
				&apos;0&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sorting Order</label>
    <type>Text</type>
</CustomField>