force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Customer Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Qualified Prospect</fullName>
            </value>
            <value>
                <fullName>Disqualified Prospect</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Retail Customer</fullName>
            </value>
            <value>
                <fullName>Retail Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>