force-app/main/default/objects/Account/fields/Action_Box__c.field-meta.xml
<CustomField>
    <fullName>Action_Box__c</fullName>
    <formula>IF(ISPICKVAL(KYC_flag_dwh__c,&quot;N&quot;) &amp;&amp; (IAL_level__c = &quot;No&quot; ||IAL_level__c = &quot;2.1&quot;||IAL_level__c = &quot;2.2&quot;),&quot;ดำเนินการปรับปรุงข้อมูลลูกค้าบน touch หรือ web3270 + ควรขอ Dip Chip + ถ่ายรูปลูกค้ายืนยันตัวตนใหม่&quot;,
IF(ISPICKVAL(KYC_flag_dwh__c,&quot;Y&quot;) &amp;&amp; (IAL_level__c = &quot;No&quot; ||IAL_level__c = &quot;2.1&quot;||IAL_level__c = &quot;2.2&quot;),&quot;ดำเนินการขอ Dip Chip + ถ่ายรูปลูกค้ายืนยันตัวตนใหม่&quot;,
IF(ISPICKVAL(KYC_flag_dwh__c,&quot;N&quot;) || (ISPICKVAL(KYC_flag_dwh__c,&quot;Y&quot;)&amp;&amp; KYC_next_review_date__c-Today() &lt;= 30) , &quot;ดำเนินการปรับปรุงข้อมูลลูกค้าบน touch หรือ web3270&quot;,&quot;&quot; )))</formula>
    <label>Action Box</label>
    <type>Text</type>
</CustomField>