force-app/main/default/objects/Account/fields/Address_populate__c.field-meta.xml
<CustomField>
    <fullName>Address_populate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Address1 + Province + Zip Code</description>
    <label>Address_populate</label>
    <type>Checkbox</type>
</CustomField>