force-app/main/default/objects/Account/fields/Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Amount_3__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>