force-app/main/default/objects/Account/fields/Annual_Revenue_Core_bank__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Core_bank__c</fullName>
    <label>Annual Revenue (Core bank)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>