force-app/main/default/objects/Account/fields/Annual_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_Status__c</fullName>
    <formula>IF 
( 
  YEAR(Next_Annual_Review_Date__c) &gt; YEAR(TODAY()), 
  &quot;1.Done&quot;, 
   IF 
   ( 
     YEAR(Next_Annual_Review_Date__c) &lt; YEAR (TODAY()), 
     &quot;2.Overdue&quot;, 
     IF 
     ( 
       Next_Annual_Review_Date__c &lt; TODAY(), 
       &quot;2.Overdue&quot;, 
       IF 
       ( 
         Next_Annual_Review_Date__c &gt;= TODAY(), 
         &quot;3.Schedule&quot;, 
         &quot;&quot; 
       ) 
    ) 
   ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Review Status</label>
    <type>Text</type>
</CustomField>