force-app/main/default/objects/Account/fields/Any_international_transaction__c.field-meta.xml
<CustomField>
    <fullName>Any_international_transaction__c</fullName>
    <label>Any international transaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>