force-app/main/default/objects/Account/fields/As_of_Date_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>As_of_Date_Account_Plan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>As of Date (Account Plan)</label>
    <type>Date</type>
</CustomField>