force-app/main/default/objects/Account/fields/As_of_date_Wallet__c.field-meta.xml
<CustomField>
    <fullName>As_of_date_Wallet__c</fullName>
    <formula>TEXT(DAY(Income_as_of_Wallet__c)) &amp; &quot; &quot;&amp; CASE(MONTH( Income_as_of_Wallet__c), 1, &quot;Jan&quot;, 2, &quot;Feb&quot;, 3, &quot;Mar&quot;, 4, &quot;Apr&quot;, 5, &quot;May&quot;, 6, &quot;Jun&quot;, 7, &quot;Jul&quot;, 8, &quot;Aug&quot;, 9, &quot;Sep&quot;, 10, &quot;Oct&quot;, 11, &quot;Nov&quot;, &quot;Dec&quot;) &amp; &quot;, &quot;&amp; TEXT(YEAR(Income_as_of_Wallet__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>As of date (Wallet)</label>
    <type>Text</type>
</CustomField>