force-app/main/default/objects/Account/fields/Assigned_BRC_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_BRC_User_Name__c</fullName>
    <formula>if( RTL_Assigned_BRC__c &lt;&gt; null ,RTL_Assigned_BRC__r.FirstName + &apos; &apos; +RTL_Assigned_BRC__r.LastName +&apos; (&apos; + RTL_Assigned_BRC__r.Employee_ID__c + &apos;)&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned BRC User Name</label>
    <type>Text</type>
</CustomField>