force-app/main/default/objects/Account/fields/Automate_Result__c.field-meta.xml
<CustomField>
    <fullName>Automate_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Automate Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>