force-app/main/default/objects/Account/fields/BIZ_Click_Flag__c.field-meta.xml
<CustomField>
    <fullName>BIZ_Click_Flag__c</fullName>
    <description>Business CLICK flag (Y,N)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BIZ Click Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>