force-app/main/default/objects/Account/fields/BIZ_FLAG__c.field-meta.xml
<CustomField>
    <fullName>BIZ_FLAG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BIZ_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>