force-app/main/default/objects/Account/fields/BIZ_Touch__c.field-meta.xml
<CustomField>
    <fullName>BIZ_Touch__c</fullName>
    <formula>CASE( UPPER(BIZ_FLAG__c) , 
&quot;Y&quot;, &quot;มี&quot;, 
&quot;N&quot;, &quot;ไม่มี&quot;, 
&quot;&quot;)</formula>
    <label>BIZ Touch</label>
    <type>Text</type>
</CustomField>