force-app/main/default/objects/Account/fields/Branch_and_Zone__c.field-meta.xml
<CustomField>
    <fullName>Branch_and_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Branch</label>
    <referenceTo>Branch_and_Zone__c</referenceTo>
    <relationshipLabel>Accounts (Branch and Zone)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>