force-app/main/default/objects/Account/fields/Branch_Referred__c.field-meta.xml
<CustomField>
    <fullName>Branch_Referred__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Referred</label>
    <referenceTo>Branch_and_Zone__c</referenceTo>
    <relationshipLabel>Accounts (Branch Referred)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>