force-app/main/default/objects/Account/fields/Branch_that_create_customer__c.field-meta.xml
<CustomField>
    <fullName>Branch_that_create_customer__c</fullName>
    <formula>&apos;none&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch that create customer</label>
    <type>Text</type>
</CustomField>