force-app/main/default/objects/Account/fields/Business_CLICK_CB__c.field-meta.xml
<CustomField>
    <fullName>Business_CLICK_CB__c</fullName>
    <description>Business CLICK (Checkbox)</description>
    <formula>BIZ_Click_Flag__c = &apos;Y&apos;</formula>
    <label>Business CLICK</label>
    <type>Checkbox</type>
</CustomField>