force-app/main/default/objects/Account/fields/Business_CLICK_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Business_CLICK_TEXT__c</fullName>
    <description>Business CLICK show (มี, ไม่มี)</description>
    <formula>CASE( UPPER( BIZ_Click_Flag__c ) , 
&quot;Y&quot;, &quot;มี&quot;, 
&quot;N&quot;, &quot;ไม่มี&quot;, 
&quot;&quot;)</formula>
    <label>Business CLICK</label>
    <type>Text</type>
</CustomField>