force-app/main/default/objects/Account/fields/Business_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Type Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>