force-app/main/default/objects/Account/fields/Business_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Type Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>