force-app/main/default/objects/Account/fields/C_Home_phone_PE__c.field-meta.xml
<CustomField>
    <fullName>C_Home_phone_PE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home phone.</label>
    <type>Phone</type>
</CustomField>