force-app/main/default/objects/Account/fields/CC_Other_Point_Balance__c.field-meta.xml
<CustomField>
    <fullName>CC_Other_Point_Balance__c</fullName>
    <label>CC Other Point Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>