force-app/main/default/objects/Account/fields/CC_Reserve_Anual_Point__c.field-meta.xml
<CustomField>
    <fullName>CC_Reserve_Anual_Point__c</fullName>
    <label>CC Reserve Anual Point</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>