force-app/main/default/objects/Account/fields/Change_Segment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Segment_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Change Segment Reason</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>