force-app/main/default/objects/Account/fields/Change_to_another_region_group__c.field-meta.xml
<CustomField>
    <fullName>Change_to_another_region_group__c</fullName>
    <formula>Owner.Region__c &lt;&gt;  Change_to_owner__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change to another region/group</label>
    <type>Checkbox</type>
</CustomField>