force-app/main/default/objects/Account/fields/Change_to_be_owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Change_to_be_owner_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To-Be New Owner Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>