force-app/main/default/objects/Account/fields/Change_to_be_segment__c.field-meta.xml
<CustomField>
    <fullName>Change_to_be_segment__c</fullName>
    <description>using only in cross segment, due to after all approver approved the request, the system can not change segment immediately,  the user will change segment manually and the system will be update by batch(maybe another way).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>To-Be New Segment</label>
    <length>5</length>
    <type>Text</type>
</CustomField>