force-app/main/default/objects/Account/fields/Change_to_owner__c.field-meta.xml
<CustomField>
    <fullName>Change_to_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use to keep temp value in reassign account owner page only.</description>
    <label>Request Change Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>