force-app/main/default/objects/Account/fields/Change_within_zone_team__c.field-meta.xml
<CustomField>
    <fullName>Change_within_zone_team__c</fullName>
    <formula>Owner.Zone__c =  Change_to_owner__r.Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change within zone/team</label>
    <type>Checkbox</type>
</CustomField>