force-app/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refer from branch</fullName>
            </value>
            <value>
                <fullName>Refer from customer</fullName>
            </value>
            <value>
                <fullName>Walk-in customer</fullName>
            </value>
            <value>
                <fullName>Internet, Newspaper</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Marketing event</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Refer from RM/BDM</fullName>
            </value>
            <value>
                <fullName>Refer from RMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>