force-app/main/default/objects/Account/fields/Consolidate_Status__c.field-meta.xml
<CustomField>
    <fullName>Consolidate_Status__c</fullName>
    <description>สร้างจากฟิลด์ NOT CONSOL STMT status เพื่อดึงข้อมูลมาแสดงบนหน้าจอเป็นแบบ Consolidate</description>
    <formula>IF(RTL_NOT_CONSOL_STMT_status__c==&quot;Y&quot;,&quot;N&quot;, 
IF(RTL_NOT_CONSOL_STMT_status__c==&quot;N&quot;,&quot;Y&quot;,&quot;&quot;) 
)</formula>
    <label>Consolidate Status</label>
    <type>Text</type>
</CustomField>