force-app/main/default/objects/Account/fields/Core_Banking_Suggested_Segment__c.field-meta.xml
<CustomField>
    <fullName>Core_Banking_Suggested_Segment__c</fullName>
    <formula>IF(OR(ISBLANK(Segment_crm__c), ISNULL(Segment_crm__c), Segment_crm__c == &quot;0&quot;), 
&quot;&quot;, 
CASE(Segment_crm__c , 
&quot;1&quot; , &quot;MB&quot;, 
&quot;2&quot;, &quot;CB&quot;, 
&quot;3&quot;,&quot;BB&quot;, 
&quot;4&quot;,&quot;SE&quot;, 
&quot;5&quot;,&quot;Affluent&quot;, 
&quot;6&quot;,&quot;Middle Income&quot;, 
&quot;7&quot;,&quot;Mass&quot;, 
&quot;Others&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>