force-app/main/default/objects/Account/fields/Country_Office_PE__c.field-meta.xml
<CustomField>
    <fullName>Country_Office_PE__c</fullName>
    <label>Office Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Thailand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>