force-app/main/default/objects/Account/fields/CRM_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CRM ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>