force-app/main/default/objects/Account/fields/CS_Murex_ID__c.field-meta.xml
<CustomField>
    <fullName>CS_Murex_ID__c</fullName>
    <description>For E-Client Suitability</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Murex ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>