force-app/main/default/objects/Account/fields/CS_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_Sign_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS Sign Date</label>
    <type>Date</type>
</CustomField>