force-app/main/default/objects/Account/fields/CS_Suspend_Flag__c.field-meta.xml
<CustomField>
    <fullName>CS_Suspend_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS Suspend Flag</label>
    <type>Checkbox</type>
</CustomField>