force-app/main/default/objects/Account/fields/CSI_Waring_Message__c.field-meta.xml
<CustomField>
    <fullName>CSI_Waring_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSI Warning Message</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>