force-app/main/default/objects/Account/fields/Cust_Type_Desc__c.field-meta.xml
<CustomField>
    <fullName>Cust_Type_Desc__c</fullName>
    <description>Description of Cust type, eg.สมาคม สโมสร และมูลนิธิที่เสียภาษี ,วัด,สภากาชาด,สมาคม,มูลนิธิ,โบสถ์คริสต์,มัสยิด,พรรคการเมือง,องค์กรสาธารณกุศลต่าง ๆ ที่ได้รับการยกเว้นภาษี,สภาอุตสาหกรรมและองค์การมหาชนที่มีกฏหมายจัดตั้งเฉพาะ โดยไม่มีวัตถุ</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cust Type Desc</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>