force-app/main/default/objects/Account/fields/Customer_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Created_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Created Date</label>
    <type>Date</type>
</CustomField>