force-app/main/default/objects/Account/fields/Customer_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Creation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Creation Date</label>
    <type>Date</type>
</CustomField>