force-app/main/default/objects/Account/fields/Customer_Name_PE_Eng__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_PE_Eng__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Customer Name EN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>