force-app/main/default/objects/Account/fields/Customer_Owner__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owner__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Owner</label>
    <type>Text</type>
</CustomField>