force-app/main/default/objects/Account/fields/Customer_Segment_Team__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_Team__c</fullName>
    <formula>Core_Banking_Suggested_Segment__c &amp; &quot; : &quot; &amp;  Sub_Segment2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment &amp; Team</label>
    <type>Text</type>
</CustomField>