force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>ประเภทลูกค้าว่าเป็น  บุคคล หรือ บริษัท</description>
    <inlineHelpText>ประเภทลูกค้าว่าเป็น  บุคคล หรือ บริษัท</inlineHelpText>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Juristic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>