force-app/main/default/objects/Account/fields/Date_of_First_Account_Opening__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Account_Opening__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of First Account Opening</label>
    <type>Date</type>
</CustomField>