force-app/main/default/objects/Account/fields/DNC_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>DNC_Expired_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DNC Expired Date</label>
    <type>Date</type>
</CustomField>