force-app/main/default/objects/Account/fields/DPD__c.field-meta.xml
<CustomField>
    <fullName>DPD__c</fullName>
    <label>DPD</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>