force-app/main/default/objects/Account/fields/DSS_ACCOUNT_RECEIVABLE__c.field-meta.xml
<CustomField>
    <fullName>DSS_ACCOUNT_RECEIVABLE__c</fullName>
    <label>Account Receivable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>