force-app/main/default/objects/Account/fields/DSS_CASH_AND_DEPOSIT__c.field-meta.xml
<CustomField>
    <fullName>DSS_CASH_AND_DEPOSIT__c</fullName>
    <label>Cash And Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>