force-app/main/default/objects/Account/fields/DSS_COMM_STOCK_ISSU_PAID_SHARE__c.field-meta.xml
<CustomField>
    <fullName>DSS_COMM_STOCK_ISSU_PAID_SHARE__c</fullName>
    <inlineHelpText>ทุนชำระแล้ว (บาท)</inlineHelpText>
    <label>Comm stock issue paid share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>