force-app/main/default/objects/Account/fields/DSS_COMPANY_STATUS__c.field-meta.xml
<CustomField>
    <fullName>DSS_COMPANY_STATUS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>