force-app/main/default/objects/Account/fields/DSS_DATE_OF_DATA__c.field-meta.xml
<CustomField>
    <fullName>DSS_DATE_OF_DATA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ข้อมูล ณ</inlineHelpText>
    <label>Date of data</label>
    <type>Date</type>
</CustomField>