force-app/main/default/objects/Account/fields/DSS_FISCAL_YEAR__c.field-meta.xml
<CustomField>
    <fullName>DSS_FISCAL_YEAR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>งบการเงินปีล่าสุด</inlineHelpText>
    <label>Fiscal year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>