force-app/main/default/objects/Account/fields/DSS_ISIC__c.field-meta.xml
<CustomField>
    <fullName>DSS_ISIC__c</fullName>
    <description>ISIC</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>รหัส TSIC</inlineHelpText>
    <label>Isic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>