force-app/main/default/objects/Account/fields/DSS_NET_INCOME__c.field-meta.xml
<CustomField>
    <fullName>DSS_NET_INCOME__c</fullName>
    <label>Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>