force-app/main/default/objects/Account/fields/DSS_PROFIT_LOSS_2Y__c.field-meta.xml
<CustomField>
    <fullName>DSS_PROFIT_LOSS_2Y__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profit Loss 2Y</label>
    <length>100</length>
    <type>Text</type>
</CustomField>