force-app/main/default/objects/Account/fields/DSS_TELEPHONE_NO__c.field-meta.xml
<CustomField>
    <fullName>DSS_TELEPHONE_NO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Telephone No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>