force-app/main/default/objects/Account/fields/DSS_TOTAL_ASSETS__c.field-meta.xml
<CustomField>
    <fullName>DSS_TOTAL_ASSETS__c</fullName>
    <inlineHelpText>รวมสินทรัพย์</inlineHelpText>
    <label>Total assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>