force-app/main/default/objects/Account/fields/DSS_TOTAL_LIABILITY__c.field-meta.xml
<CustomField>
    <fullName>DSS_TOTAL_LIABILITY__c</fullName>
    <inlineHelpText>รวมหนี้สิน</inlineHelpText>
    <label>Total liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>