force-app/main/default/objects/Account/fields/DSS_TOTAL_SHAREHOLDER_EQUITY__c.field-meta.xml
<CustomField>
    <fullName>DSS_TOTAL_SHAREHOLDER_EQUITY__c</fullName>
    <description>TOTAL_SHAREHOLDER_EQUITY</description>
    <inlineHelpText>รวมส่วนของผู้ถือหุ้น</inlineHelpText>
    <label>Total shareholder equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>