force-app/main/default/objects/Account/fields/DSS_TYPE_OF_BUSINESS__c.field-meta.xml
<CustomField>
    <fullName>DSS_TYPE_OF_BUSINESS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ประเภทธุรกิจ</inlineHelpText>
    <label>Type of business</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>