force-app/main/default/objects/Account/fields/E_KYC__c.field-meta.xml
<CustomField>
    <fullName>E_KYC__c</fullName>
    <formula>IF(ISPICKVAL(E_KYC_flag__c,&quot;Y&quot;) ,&quot;เคย&quot;,&quot;ไม่เคย&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>e-KYC</label>
    <type>Text</type>
</CustomField>