force-app/main/default/objects/Account/fields/Early_Warning_Reason__c.field-meta.xml
<CustomField>
    <fullName>Early_Warning_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Early Warning Reason</label>
    <type>TextArea</type>
</CustomField>