force-app/main/default/objects/Account/fields/Email_Address_PE__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_PE__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>