force-app/main/default/objects/Account/fields/ESTABLISH_DT__c.field-meta.xml
<CustomField>
    <fullName>ESTABLISH_DT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Establish Date</label>
    <type>Date</type>
</CustomField>