force-app/main/default/objects/Account/fields/Estimated_interest_rate_offer__c.field-meta.xml
<CustomField>
    <fullName>Estimated_interest_rate_offer__c</fullName>
    <label>Estimated interest rate offer</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>