force-app/main/default/objects/Account/fields/FATCA_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>FATCA_Form_Completed__c</fullName>
    <inlineHelpText>ให้ลูกค้ากรอกและลงนามแบบพอร์ม FATCA นำส่งผ่านระบบ FATCA Cleansing เพื่อนำส่ง บลจ. ทหารไทย</inlineHelpText>
    <label>FATCA Form Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>