force-app/main/default/objects/Account/fields/Favorite_Food__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Food__c</fullName>
    <label>Favorite Food</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Japanese food</fullName>
            </value>
            <value>
                <fullName>Thai food - Central</fullName>
            </value>
            <value>
                <fullName>Thai food - Northeastern</fullName>
            </value>
            <value>
                <fullName>Thai food - Northern</fullName>
            </value>
            <value>
                <fullName>Seafood</fullName>
            </value>
            <value>
                <fullName>Western food</fullName>
            </value>
            <value>
                <fullName>Chinese food</fullName>
            </value>
            <value>
                <fullName>Organic food</fullName>
            </value>
            <value>
                <fullName>Thai food - Southern</fullName>
            </value>
            <value>
                <fullName>Vegan food</fullName>
            </value>
            <value>
                <fullName>Vegetarian food</fullName>
            </value>
            <value>
                <fullName>Korean food</fullName>
            </value>
            <value>
                <fullName>Islamic food</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>